objects/ApplicationFormRelation.object
<CustomObject>
    <fields>
        <fullName>gps_Education_Score_Explanation__c</fullName>
        <label>Education Score Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gps_Education_Score__c</fullName>
        <label>Education Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_Experience_Score_Explanation__c</fullName>
        <label>Experience Score Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gps_Experience_Score__c</fullName>
        <label>Experience Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_Location_Explanation__c</fullName>
        <label>Location Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gps_Skills_Score_Explanation__c</fullName>
        <label>Skills Score Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gps_Skills_Score__c</fullName>
        <label>Skills Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_Total_Score__c</fullName>
        <formula>gps_Education_Score__c +  gps_Experience_Score__c +  gps_Skills_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_Valid_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Location</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ApplicationFormRelation</fullName>
        <filterScope>Everything</filterScope>
        <label>All Application Form Relations</label>
    </listViews>
    <listViews>
        <fullName>All_ApplicationFormRelations</fullName>
        <filterScope>Everything</filterScope>
        <label>AllApplicationFormRelations</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>